# witchblast

./: .gitignore  CMakeLists.txt  readme.txt
cmake_modules/: FindSFML.cmake
data/: labels.txt
media/: SIL Open Font License.txt
media/gamerzilla/: witchblast.game
src/: Achievements.h  ArtefactDescriptionEntity.cpp  ArtefactDescriptionEntity.h  BaseCreatureEntity.cpp  BaseCreatureEntity.h  BatEntity.cpp  BatEntity.h  BlackRatEntity.cpp  BlackRatEntity.h  BogeymanEntity.cpp  BoltEntity.cpp  BoltEntity.h  BubbleEntity.cpp  BubbleEntity.h  ButcherEntity.cpp  ButcherEntity.h  CauldronEntity.cpp  CauldronEntity.h  ChestEntity.cpp  ChestEntity.h  Config.cpp  Config.h  Constants.h  CyclopEntity.cpp  CyclopEntity.h  CyclopsEntity.cpp  CyclopsEntity.h  DoorEntity.cpp  DoorEntity.h  DungeonMap.cpp  DungeonMap.h  DungeonMapEntity.cpp  DungeonMapEntity.h  EffectZoneEntity.cpp  EffectZoneEntity.h  EnemyBoltEntity.cpp  EnemyBoltEntity.h  EnemyEntity.cpp  EnemyEntity.h  EnnemyBoltEntity.cpp  (+88 more)
src/Entities/: ArtefactDescriptionEntity.cpp  ArtefactDescriptionEntity.h  BaseCreatureEntity.cpp  BaseCreatureEntity.h  BatEntity.cpp  BlackRatEntity.cpp  BlackRatEntity.h  BogeymanEntity.cpp  BogeymanEntity.h  BoltEntity.cpp  BoltEntity.h  BubbleEntity.cpp  ButcherEntity.cpp  ButcherEntity.h  CauldronEntity.cpp  CauldronEntity.h  ChestEntity.cpp  ChestEntity.h  CyclopsEntity.cpp  CyclopsEntity.h  DoorEntity.cpp  DoorEntity.h  DungeonMapEntity.cpp  DungeonMapEntity.h  EnemyBoltEntity.cpp  EnemyEntity.cpp  EnemyEntity.h  EvilFlowerEntity.cpp  ExplosionEntity.cpp  ExplosionEntity.h  FairyEntity.cpp  FairyEntity.h  FallingRockEntity.cpp  FallingRockEntity.h  FranckyEntity.cpp  GhostEntity.cpp  GhostEntity.h  GiantSlimeEntity.cpp  GiantSlimeEntity.h  GiantSpiderEntity.cpp  (+43 more)
src/ressources/: witchblast.icns
src/sfml_game/: CollidingSpriteEntity.cpp  CollidingSpriteEntity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  GameMap.cpp  GameMap.h  GuiEntity.cpp  GuiEntity.h  ImageManager.cpp  ImageManager.h  MyTools.h  SoundManager.cpp  SoundManager.h  SpriteEntity.cpp  SpriteEntity.h  TileMapEntity.cpp  TileMapEntity.h
